inventree-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventree-app
  labels:
    app: inventree-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventree-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: inventree-app
    spec:
      containers:
        - name: inventree-server
          image: inventree/inventree:0.17.1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: inventree-data
              mountPath: /home/inventree/data
            - name: inventree-data
              mountPath: /var/www/static
              subPath: static
          lifecycle:
            postStart:
              exec:
                command: [
                  "/bin/sh", "-c",
                  "cp -rf /home/inventree/src/backend/InvenTree/InvenTree/static /home/inventree/data && \
                   cp -rf /home/inventree/src/backend/InvenTree/InvenTree/static_i18n/i18n /var/www/static/i18n && \
                   cp -rf /root/.local/lib/python3.11/site-packages/django/contrib/admin/static/admin /var/www/static/admin && \
                   mkdir -p /var/www/static/web/ && \
                   cp -rf /home/inventree/src/backend/InvenTree/web/static/web/* /var/www/static/web/"
                ]
        
        - name: inventree-proxy
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.prod.conf
              readOnly: true
            - name: inventree-data
              mountPath: /var/www

      volumes:
        - name: config
          configMap:
            name: inventree-nginx-config
        - name: inventree-data
          persistentVolumeClaim:
            claimName: inventree-data

      restartPolicy: Always
