inventree-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    app: inventree-worker
  name: inventree-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventree-worker
  strategy:
    type: Recreate
  template:
    metadata:      
      labels:
        app: inventree-worker
    spec:
      containers:
        - args:
            - invoke
            - worker
          image: inventree/inventree:stable
          name: inventree-worker          
          volumeMounts:
            - mountPath: /home/inventree/data
              name: inventree-data
      restartPolicy: Always
      volumes:
        - name: inventree-data
          persistentVolumeClaim:
            claimName: inventree-data
