inventree-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: inventree-app
  name: inventree-app
spec:
  ports:
  - name: server
    port: 8000
    targetPort: 8000
  - name: proxy
    port: 80
    targetPort: 80
  selector:
    app: inventree-app
