inventree-cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: inventree-cache
  name: inventree-cache
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    app: inventree-cache
