ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: inventree  
spec:
  rules:
  - host: inventree.example.com
    http:
      paths:
      - backend:
          service:            
            name: inventree-app
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - inventree.example.com
    secretName: inventree-tls
